...

  String userid;
  List<bool> isselected = [true, false];
  List<String> listItem = [
    'Beverages',
    'Canned Food',
    'Dairy Product',
    'Dry Food',
    'Snacks',
    'Vegetables',
  ];
  String valueChoose;
  File image;
...
          color: offWhite,
          child: Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: <Widget>[
                SizedBox(height: 20),
                InkWell(
                  key: Key('image'),
                  onTap: () async {
                    _showPicker(context);
                  },
                  child: Center(
                    child: ClipRRect(
                      borderRadius: BorderRadius.circular(15.0),
...
                ),
                Padding(
                  padding: const EdgeInsets.fromLTRB(20, 5, 20, 0),
                  child: Container(
                    height: 40,
                    child: ToggleButtons(
                      key: const Key('toggleBtn'),
                      borderRadius: BorderRadius.circular(8.0),
                      isSelected: isselected,
                      color: Colors.grey[500],
                      selectedColor: primaryColor,
                      fillColor: Colors.grey[800],
                      renderBorder: true,
                      children: <Widget>[
                        Padding(
                          key: const Key('GivingAway'),
                          padding: const EdgeInsets.symmetric(horizontal: 8.0),
                          child:
                          Text('Giving away', style: TextStyle(fontSize: 17)),
                        ),
                        Padding(
                          key: const Key('RequestingFor'),
                          padding: const EdgeInsets.symmetric(horizontal: 8.0),
                          child: Text('Requesting for ',
                              style: TextStyle(fontSize: 17)),
                        ),
                      ],
                      onPressed: (int newIndex) {
...
                ),
                Container(
                  child: Padding(
                    padding: const EdgeInsets.fromLTRB(20, 10, 20, 10),
                    child: Container(
                      child: TextField(
                          key: const Key('description'),
                          minLines: 4,//Normal textInputField will be displayed
                          maxLines: 4,
                          style: TextStyle(fontSize: 16),
                          controller: descriptionController,
                          decoration: InputDecoration(
                              focusedBorder :OutlineInputBorder(
...
                              enabledBorder: OutlineInputBorder(
                                borderSide: BorderSide(color: Colors.white, width: 1.0),
                                borderRadius: BorderRadius.all(Radius.circular(16.0)),
                              ),
                              filled: true,
                              fillColor: Colors.white,
                              hintText: 'pick a location')
                      ),
                    ),
                  ),
                ),
                SizedBox(height: 10),
                Container(
                    padding: EdgeInsets.fromLTRB(100, 5, 100, 20),
                    child: CustomCurvedButton(
                      btnKey: 'CreateListing',
                      btnText: 'Create Listing',
                      btnPressed: () async {
                        // validation
                        if (image == null) {
                          await Dialogs.errorAbortDialog(
                              context, 'Please select a photo!');
                          print('No image uploaded');
                          return;
                        }

                        if (valueChoose == null) {
                          final action = await Dialogs.errorAbortDialog(
...
                          print('No category selected');
                          return;
                        }

                        if (listingTitleController.text == '') {
                          final action = await Dialogs.errorAbortDialog(
                              context, 'Name of product cannot be empty!');
                          print('No listing title inputted');
                          return;
                        }

                        if (_currentLocation == null) {
                          await Dialogs.errorAbortDialog(
...
        builder: (BuildContext bc) {
          return SafeArea(
            child: Container(
              child: Wrap(
                children: <Widget>[
                  ListTile(
                      key : Key('PhotoLibrary'),
                      leading: Icon(Icons.photo_library),
                      title: Text('Photo Library'),
                      onTap: () {
                        _gallery();
                        Navigator.of(context).pop();
                      }),
                  ListTile(
                    key : Key('Camera'),
                    leading: Icon(Icons.photo_camera),
                    title: Text('Camera'),
                    onTap: () {
                      _camera();
                      Navigator.of(context).pop();
                    },
...
