...
      ) async {
    final action = await showDialog(
      context: context,
      barrierDismissible: false,
      builder: (BuildContext context) {
        return AlertDialog(
          key: Key('Alert Dialog'),
          shape: RoundedRectangleBorder(
            borderRadius: BorderRadius.circular(10),

          ),

          title: Icon(
...
